Change configure windows size

--- a/Language/en.json
+++ b/Language/en.json
@@ -25,8 +25,10 @@
     "config_window_content": "Configuration options will be here.",
     "config_path_label": "Character Directory",
     "browse_button": "Browse...",
+    "config_file_path_label": "Configuration Directory",
     "save_button": "Save",
     "select_folder_dialog_title": "Select Character Folder",
+    "select_config_folder_dialog_title": "Select Configuration Folder",
     "config_saved_success": "Settings saved successfully.",
     "config_debug_mode_label": "Enable debug mode (creates debug.log)",
     "config_log_path_label": "Log Directory",
