--- a/Language/de.json
+++ b/Language/de.json
@@ -25,8 +25,10 @@
     "config_window_content": "Konfigurationsoptionen werden hier sein.",
     "config_path_label": "Charakterverzeichnis",
     "browse_button": "Durchsuchen...",
+    "config_file_path_label": "Konfigurationsverzeichnis",
     "save_button": "Speichern",
     "select_folder_dialog_title": "Charakterordner auswählen",
+    "select_config_folder_dialog_title": "Konfigurationsordner auswählen",
     "config_saved_success": "Einstellungen erfolgreich gespeichert.",
     "config_debug_mode_label": "Debug-Modus aktivieren (erstellt debug.log)",
     "config_log_path_label": "Log-Verzeichnis",
