--- a/Language/fr.json
+++ b/Language/fr.json
@@ -26,8 +26,10 @@
     "config_window_content": "Les options de configuration seront ici.",
     "config_path_label": "Répertoire des personnages",
     "browse_button": "Parcourir...",
+    "config_file_path_label": "Répertoire de configuration",
     "save_button": "Enregistrer",
     "select_folder_dialog_title": "Sélectionner le dossier des personnages",
+    "select_config_folder_dialog_title": "Sélectionner le dossier de configuration",
     "config_saved_success": "Configuration enregistrée avec succès.",
     "config_debug_mode_label": "Activer le mode débogage (crée debug.log)",
     "config_log_path_label": "Répertoire des logs",
