--- a/Language/en.json
+++ b/Language/en.json
@@ -37,5 +37,14 @@
     "config_log_path_label": "Log Directory",
     "select_log_folder_dialog_title": "Select Log Folder",
     "config_language_label": "Application Language",
-    "language_name": "English"
+    "language_name": "English",
+    "config_show_debug_window_label": "Show debug window on startup",
+    "debug_window_title": "Debug Console",
+    "debug_level_menu": "Level",
+    "debug_level_all": "All",
+    "status_bar_loaded": "Ready. Loaded in {duration:.2f} seconds.",
+    "debug_font_size_menu": "Font Size",
+    "font_size_small": "Small",
+    "font_size_medium": "Medium",
+    "font_size_large": "Large"
 }
