--- a/Language/fr.json
+++ b/Language/fr.json
@@ -47,5 +47,12 @@
     "debug_font_size_menu": "Police",
     "font_size_small": "Petite",
     "font_size_medium": "Moyenne",
-    "font_size_large": "Grande"
+    "font_size_large": "Grande",
+    "debug_log_pane_title": "Logs",
+    "debug_errors_pane_title": "Erreurs & Tracebacks",
+    "test_debug_button": "Test Debug",
+    "debug_details_pane_title": "Détails",
+    "debug_log_reader_pane_title": "Lecture des fichiers de logs",
+    "clear_button_text": "Effacer",
+    "log_reader_file_not_found": "Le fichier debug.log n'existe pas. Activez le mode débogage dans la configuration pour le créer."
 }
