--- a/Language/de.json
+++ b/Language/de.json
@@ -54,5 +54,8 @@
     "debug_details_pane_title": "Details",
     "debug_log_reader_pane_title": "Logdatei lesen",
     "clear_button_text": "Löschen",
-    "log_reader_file_not_found": "debug.log-Datei existiert nicht. Aktivieren Sie den Debug-Modus in den Einstellungen, um sie zu erstellen."
+    "log_reader_file_not_found": "debug.log-Datei existiert nicht. Aktivieren Sie den Debug-Modus in den Einstellungen, um sie zu erstellen.",
+    "column_name": "Name",
+    "column_realm": "Reich",
+    "column_level": "Stufe"
 }
