Add Realm , Saison and Realm Rank colum and configuration

--- a/Language/de.json
+++ b/Language/de.json
@@ -13,6 +13,8 @@
     "new_char_dialog_title": "Neuer Charakter",
     "new_char_dialog_prompt": "Geben Sie den Namen des Charakters ein:",
     "new_char_realm_prompt": "Wählen Sie ein Reich:",
+    "new_char_season_prompt": "Saison:",
+    "new_char_server_prompt": "Server:",
     "char_name_empty_error": "Der Charaktername darf nicht leer sein.",
     "success_title": "Erfolg",
     "error_title": "Fehler",
@@ -38,6 +40,9 @@
     "config_log_path_label": "Log-Verzeichnis",
     "select_log_folder_dialog_title": "Log-Ordner auswählen",
     "config_language_label": "Anwendungssprache",
+    "config_default_server_label": "Standardserver",
+    "config_default_season_label": "Standard-Saison",
+    "config_server_season_group_title": "Server & Saison",
     "language_name": "Deutsch",
     "config_show_debug_window_label": "Debug-Fenster beim Start anzeigen",
     "debug_window_title": "Debug-Konsole",
@@ -61,6 +66,10 @@
     "column_name": "Name",
     "column_realm": "Reich",
     "column_level": "Stufe",
+    "column_season": "Saison",
+    "column_server": "Server",
+    "column_realm_rank": "Reichsrang",
+    "char_sheet_realm_rank": "Reichsrang:",
     "character_sheet_title": "Charakterbogen - {name}",
     "delete_char_confirm_title": "Löschen bestätigen",
     "delete_char_confirm_message": "Sind Sie sicher, dass Sie den Charakter '{name}' endgültig löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
