--- a/Language/en.json
+++ b/Language/en.json
@@ -13,6 +13,8 @@
     "new_char_dialog_title": "New Character",
     "new_char_dialog_prompt": "Enter the character's name:",
     "new_char_realm_prompt": "Choose a realm:",
+    "new_char_season_prompt": "Season:",
+    "new_char_server_prompt": "Server:",
     "char_name_empty_error": "Character name cannot be empty.",
     "success_title": "Success",
     "error_title": "Error",
@@ -37,6 +39,9 @@
     "config_log_path_label": "Log Directory",
     "select_log_folder_dialog_title": "Select Log Folder",
     "config_language_label": "Application Language",
+    "config_default_server_label": "Default Server",
+    "config_default_season_label": "Default Season",
+    "config_server_season_group_title": "Server & Season",
     "language_name": "English",
     "config_show_debug_window_label": "Show debug window on startup",
     "debug_window_title": "Debug Console",
@@ -60,6 +65,10 @@
     "column_name": "Name",
     "column_realm": "Realm",
     "column_level": "Level",
+    "column_season": "Season",
+    "column_server": "Server",
+    "column_realm_rank": "Realm Rank",
+    "char_sheet_realm_rank": "Realm Rank:",
     "character_sheet_title": "Character Sheet - {name}",
     "delete_char_confirm_title": "Confirm Deletion",
     "delete_char_confirm_message": "Are you sure you want to permanently delete the character '{name}'? This action cannot be undone.",
