--- a/Language/fr.json
+++ b/Language/fr.json
@@ -13,6 +13,8 @@
     "new_char_dialog_title": "Nouveau Personnage",
     "new_char_dialog_prompt": "Entrez le nom du personnage :",
     "new_char_realm_prompt": "Choisissez un royaume :",
+    "new_char_season_prompt": "Saison :",
+    "new_char_server_prompt": "Serveur :",
     "char_name_empty_error": "Le nom du personnage ne peut pas être vide.",
     "success_title": "Succès",
     "error_title": "Erreur",
@@ -38,6 +40,9 @@
     "config_log_path_label": "Répertoire des logs",
     "select_log_folder_dialog_title": "Sélectionner le dossier des logs",
     "config_language_label": "Langue de l'application",
+    "config_default_server_label": "Serveur par défaut",
+    "config_default_season_label": "Saison par défaut",
+    "config_server_season_group_title": "Serveur & Saison",
     "language_name": "Français",
     "config_show_debug_window_label": "Afficher la fenêtre de débogage au démarrage",
     "debug_window_title": "Console de débogage",
@@ -61,11 +66,17 @@
     "column_name": "Nom",
     "column_realm": "Royaume",
     "column_level": "Niveau",
+    "column_season": "Saison",
+    "column_server": "Serveur",
+    "column_realm_rank": "Rang Royaume",
+    "char_sheet_realm_rank": "Rang de Royaume :",
     "character_sheet_title": "Feuille de personnage - {name}",
     "column_action": "Action",
     "delete_char_confirm_title": "Confirmer la suppression",
     "delete_char_confirm_message": "Êtes-vous sûr de vouloir supprimer définitivement le personnage '{name}' ? Cette action est irréversible.",
     "context_menu_delete": "Supprimer",
+    "context_menu_rename": "Renommer",
+    "rename_char_dialog_title": "Renommer le personnage",
     "column_selection": "Sélection",
     "theme_change_restart_message": "Le thème a été changé. Veuillez redémarrer l'application pour que les changements prennent effet.",
     "qdarkstyle_not_found_tooltip": "Module 'qdarkstyle' non trouvé. Exécutez 'pip install qdarkstyle' pour activer le thème sombre.",
