Add Deduplication characters options

--- a/Language/de.json
+++ b/Language/de.json
@@ -75,6 +75,10 @@
     "delete_char_confirm_message": "Sind Sie sicher, dass Sie den Charakter '{name}' endgültig löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
     "column_action": "Aktion",
     "context_menu_delete": "Löschen",
+    "context_menu_rename": "Umbenennen",
+    "context_menu_duplicate": "Duplizieren",
+    "duplicate_char_dialog_title": "Charakter duplizieren",
+    "duplicate_char_dialog_prompt": "Name des neuen Charakters:",
     "column_selection": "Auswahl",
     "theme_change_restart_message": "Das Thema wurde geändert. Bitte starten Sie die Anwendung neu, damit die Änderungen wirksam werden.",
     "qdarkstyle_not_found_tooltip": "Modul 'qdarkstyle' nicht gefunden. Führen Sie 'pip install qdarkstyle' aus, um das dunkle Thema zu aktivieren.",
