--- a/Language/en.json
+++ b/Language/en.json
@@ -74,6 +74,10 @@
     "delete_char_confirm_message": "Are you sure you want to permanently delete the character '{name}'? This action cannot be undone.",
     "column_action": "Action",
     "context_menu_delete": "Delete",
+    "context_menu_rename": "Rename",
+    "context_menu_duplicate": "Duplicate",
+    "duplicate_char_dialog_title": "Duplicate Character",
+    "duplicate_char_dialog_prompt": "New character name:",
     "column_selection": "Selection",
     "theme_change_restart_message": "The theme has been changed. Please restart the application for the changes to take effect.",
     "qdarkstyle_not_found_tooltip": "Module 'qdarkstyle' not found. Run 'pip install qdarkstyle' to enable the dark theme.",
