--- a/Language/fr.json
+++ b/Language/fr.json
@@ -76,6 +76,9 @@
     "delete_char_confirm_message": "Êtes-vous sûr de vouloir supprimer définitivement le personnage '{name}' ? Cette action est irréversible.",
     "context_menu_delete": "Supprimer",
     "context_menu_rename": "Renommer",
+    "context_menu_duplicate": "Dupliquer",
+    "duplicate_char_dialog_title": "Dupliquer le personnage",
+    "duplicate_char_dialog_prompt": "Nom du nouveau personnage :",
     "rename_char_dialog_title": "Renommer le personnage",
     "column_selection": "Sélection",
     "theme_change_restart_message": "Le thème a été changé. Veuillez redémarrer l'application pour que les changements prennent effet.",
