--- a/Language/fr.json
+++ b/Language/fr.json
@@ -70,6 +70,8 @@
     "column_server": "Serveur",
     "column_realm_rank": "Rang",
     "column_realm_title": "Titre",
+    "column_page": "Page",
+    "column_guild": "Guilde",
     "char_sheet_realm_rank": "Rang de Royaume :",
     "character_sheet_title": "Feuille de personnage - {name}",
     "column_action": "Action",
@@ -101,5 +103,19 @@
     "columns_config_desc": "Sélectionnez les colonnes à afficher :",
     "columns_select_all": "Tout sélectionner",
     "columns_deselect_all": "Tout désélectionner",
-    "columns_config_saved": "Configuration des colonnes sauvegardée."
+    "columns_config_saved": "Configuration des colonnes sauvegardée.",
+    "menu_file": "Fichier",
+    "menu_file_new_character": "Nouveau Personnage",
+    "menu_file_settings": "Paramètres",
+    "menu_view": "Affichage",
+    "menu_view_columns": "Colonnes",
+    "menu_help": "Aide",
+    "menu_help_about": "À propos",
+    "about_dialog_title": "À propos de {app_name}",
+    "about_dialog_content": "Application : {app_name}\nVersion : {version}\nCréateur : Ewoline\n\nGestionnaire de personnages pour Dark Age of Camelot",
+    "status_bar_selection_count": "{count} sur {total} personnage(s) sélectionné(s)",
+    "rename_char_dialog_prompt": "Nouveau nom :",
+    "new_char_page_prompt": "Page :",
+    "new_char_guild_prompt": "Guilde :",
+    "new_char_level_prompt": "Niveau :"
 }
